feat: wallet freeze
